--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <!-- app social site links section -->
     <string name="facebook_url">https://www.facebook.com/pg/fandroidinfo/</string>
-    <string name="youtube_url">https://www.youtube.com/user/vitaxafication</string>
+    <string name="youtube_url">http://гб4сочи.рф/%D0%BF%D0%BB%D0%B0%D1%82%D0%BD%D1%8B%D0%B5-%D1%83%D1%81%D0%BB%D1%83%D0%B3%D0%B8/%D0%BE%D1%84%D1%82%D0%B0%D0%BB%D1%8C%D0%BC%D0%BE%D0%BB%D0%BE%D0%B3%D0%B8%D1%8F</string>
     <string name="twitter_user_id">twitter://user?user_id=1329640969</string> <!-- find your user id from here: http://gettwitterid.com/  -->
     <string name="twitter_url">https://twitter.com/nepochatoff</string>
     <string name="google_plus_url">https://plus.google.com/u/0/+vitaxafication</string>
